@@ -1,3 +1,12 @@
+2009-09-03  Dave Korn  <dave.korn.cygwin@gmail.com>
+
+	* scripttempl/pe.sc (.text): Add "*(.text.*)" in order to catch
+	new GCC hot/cold/unlikely partitions.
+	* scripttempl/pep.sc: Likewise.
+	* scripttempl/epocpe.sc: Likewise.
+	* scripttempl/mcorepe.sc: Likewise.
+	* scripttempl/ppcpe.sc: Likewise.
+
 2009-09-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* Makefile.am (ldgram.o, ldlex.o, deffilep.o): Supply correct
